# recipe-chatbot

./: .gitignore  README.md  env.example  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  main.py  utils.py
data/: sample_queries.csv
frontend/: index.html
homeworks/hw2/: README.md  error_analysis_template.csv  failure_mode_taxonomy.md  generate_synthetic_queries.py  results_20250518_215844.csv  synthetic_queries_for_analysis.csv
homeworks/hw3/: README.md
homeworks/hw3/data/: dev_set.csv  dietary_queries.csv  labeled_traces.csv  test_set.csv  train_set.csv
homeworks/hw3/results/: dev_predictions.json  final_evaluation.json  judge_performance.json  judge_prompt.txt  judgy_test_data.json  test_predictions.json
homeworks/hw3/scripts/: develop_judge.py  evaluate_judge.py  generate_traces.py  label_data.py  run_full_evaluation.py  split_data.py
scripts/: bulk_test.py
